fixed text align

--- a/7-huddle-landing-page-with-single-introductory-section-main/css/main.css
+++ b/7-huddle-landing-page-with-single-introductory-section-main/css/main.css
@@ -84,6 +84,7 @@ body {
 }
 @media (min-width: 1025px) {
   .hero__intro {
+    text-align: left;
     margin-left: 59px;
     margin-top: 212px;
   }
