--- a/7-huddle-landing-page-with-single-introductory-section-main/scss/layouts/_hero.scss
+++ b/7-huddle-landing-page-with-single-introductory-section-main/scss/layouts/_hero.scss
@@ -49,6 +49,7 @@
         text-align: center;
 
         @media (min-width: 1025px) {
+            text-align: left;
             margin-left: 59px;
             margin-top: 212px;
         }
